@@ -54,6 +54,9 @@ $messages['deletecontactconfirm'] = 'Czy na pewno chcesz usunąć wybrane kontak
 $messages['deletemessagesconfirm'] = 'Czy na pewno chcesz usunąć wybrane wiadomości?';
 $messages['deletefolderconfirm'] = 'Czy na pewno chcesz usunąć wybrany folder?';
 $messages['purgefolderconfirm'] = 'Czy na pewno chcesz usunąć wszystkie wiadomości w tym folderze?';
+$messages['foldercreating'] = 'Dodawanie folderu...';
+$messages['folderdeleting'] = 'Usuwanie folderu...';
+$messages['folderrenaming'] = 'Zmiana nazwy folderu...';
 $messages['formincomplete'] = 'Uzupełnij formularz!';
 $messages['noemailwarning'] = 'Podaj poprawny adres e-mail!';
 $messages['nonamewarning'] = 'Podaj nazwę!';
